<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zaloguj">zaloguj</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="status">Status</string>
    <string name="editProfile">Edit profile</string>
    <string name="ipAddress">Wprowadź poprawny adres IP serwera</string>
    <string name="_sdcard_ssh_id_rsa">/sdcard/.ssh/id_rsa</string>
    <string name="database">Baza danych</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_database_text">DatabaseText</string>
    <string name="logs">Logi</string>
    <string name="title_activity_logs">Logs</string>
    <string name="search">Search</string>
    <string name="Search">search</string>
    <string name="title_activity_tittle">TittleActivity</string>
    <string name="pomoc">Pomoc</string>
    <string name="titleApp">DNS Manager</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="configFile">Pliki konfiguracyjne</string>
    <string name="title_activity_config">Config</string>
    <string name="title_activity_config_text">ConfigText</string>
    <string name="przejdzDoLogowania">Przejdz do logowania</string>
    <string name="title_activity_check_connection">CheckConnection</string>
    <string name="logging">Zaloguj</string>

</resources>
