<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dns.MainActivity" >

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonStart"
        android:layout_below="@+id/buttonStart"
        android:layout_marginTop="5dp"
        android:minWidth="200dp"
        android:text="@string/stop"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonStop"
        android:layout_below="@+id/buttonStop"
        android:layout_marginTop="5dp"
        android:minWidth="200dp"
        android:text="@string/status"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonDatabase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonStatus"
        android:layout_alignRight="@+id/buttonStatus"
        android:layout_below="@+id/buttonStatus"
        android:layout_marginTop="5dp"
        android:text="@string/database"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/start"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonConfig"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDatabase"
        android:layout_alignRight="@+id/buttonDatabase"
        android:layout_below="@+id/buttonDatabase"
        android:layout_marginTop="5dp"
        android:text="@string/configFile"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonLog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonConfig"
        android:layout_below="@+id/buttonConfig"
        android:layout_marginTop="5dp"
        android:text="@string/logs"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>